update map to only show visible tab & prevent race condition errors

--- a/app/assets/stylesheets/components-vue/_map.scss
+++ b/app/assets/stylesheets/components-vue/_map.scss
@@ -97,6 +97,12 @@
               transform: scale(1);
             } 
           }
+
+          &.disabled {
+            cursor: default;
+            pointer-events: none;
+            opacity: 0.5;
+          }
         }
 
           &__panel-layer {
